k8s/fleet/use-case-1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a-demo
  labels:
    app.kubernetes.io/part-of: fleet-manager-demo
    fleet-demo.azure.com/use-case: namespace-placement
